# Group16-PythonVsRust

./: README.md  downloaded_page.html  favorites.csv
Python Code/: favorites.csv  massif.out.13604  massif.out.15566  output_memory_profiling.txt  quotes.csv  server.py  time_results.txt  webScrapingCSV.py  webscrapDh.py
Rust Code/my_project/: Cargo.toml  favorites.csv  massif.out.20840  quotes.csv
Rust Code/my_project/src/: bing.html  main.rs  webscrapRust.rs
code_external/: README.md
code_orig/Python Code/: favorites.csv  quotes.csv  time_profiling.txt  time_results.txt  webScrapingCSV.py
code_orig/Rust Code/my_project/: Cargo.toml  massif.out.25510
code_orig/Rust Code/my_project/src/: flipkart.html  main.rs
docs/: Contribution.md
results/: Python Analysis 1.txt  Python Analysis 2.txt  Rust Analysis 1.txt  Rust Analysis 2.txt
tests/: testing.md
