[package]
name = "my_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
tokio = { version = "1.33.0", features = ["full"] }

